[build-system]
requires = ["setuptools >= 61"]
build-backend = "setuptools.build_meta"

[project]
name = "station_bathymetry"
version = "0.1.0"
description = "Plot lat/lon bathymetry at station for oceanographic cruises."
authors = [
  { name="Laura Cimoli", email="lc929@cam.ac.uk" },
  { name="Jack Atkinson", email="jack.atkinson1000@gmail.com" },
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Natural Language :: English",
]
dependencies = [
    "netcdf4",
    "pandas",
    "matplotlib",
    "jupyter",
]

[project.optional-dependencies]
lint = [
    "black>=22.12.0",
    "pylint",
]

[project.urls]
"Homepage" = "https://github.com/GO-SHIP-Oceanography/station_bathymetry"
"Bug Tracker" = "https://github.com/GO-SHIP-Oceanography/station_bathymetry/issues"

[tool.setuptools]
# By default, include-package-data is true in pyproject.toml, so you do
# NOT have to specify this line.
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["", ]  # package names should match these glob patterns (["*"] by default)
exclude = []  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)
